[package]
name = "hirage"
version = "0.1.0"
edition = "2024"
description = "Terminal Rust compiler explorer built with Ratatui"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/hirage"

[dependencies]
crossterm = "0.29"
color-eyre = "0.6"
walkdir = "2.5"
ratatui = { version = "0.29", features = ["all-widgets"] }
syn = { version = "2", features = ["full", "visit"] }
quote = "1"