[package]
name = "hirage"
version = "0.1.1"
edition = "2024"
description = "Terminal Rust compiler explorer built with Ratatui"
license = "MIT"
repository = "https://github.com/SATVIKsynopsis/Hirage"
readme = "README.md"

keywords = ["rust", "compiler", "hir", "mir", "tui"]

categories = [
    "development-tools",
    "command-line-utilities",
]

[dependencies]
crossterm = "0.29"
color-eyre = "0.6"
walkdir = "2.5"
ratatui = { version = "0.29", features = ["all-widgets"] }
syn = { version = "2", features = ["full", "visit"] }
quote = "1"